--- a/src/assets/css/station8.css
+++ b/src/assets/css/station8.css
@@ -1,15 +1,49 @@
-.container {
+@charset "utf-8";
+
+#container {
   color: white;
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+  display: grid;
+  grid-template-rows: 1fr 2fr 2fr 2fr 1fr;
+  grid-template-columns: 1fr 5fr;
+  gap: 7px;
 }
 
 header {
   background-color: #4682B4;
+  grid-row: 1 / 2;
+  grid-column: 1 / 3;
+  height: 70px;
 }
 
-.item {
+#item1 {
   background-color: #A9A9A9;
+  grid-row: 2 / 5;
+  grid-column: 1 / 2;
+}
+
+#item2 {
+  background-color: #A9A9A9;
+  grid-row: 2 / 3;
+  grid-column: 2 / 3;
+}
+
+#item3 {
+  background-color: #A9A9A9;
+  grid-row: 3 / 4;
+  grid-column: 2 / 3;
+}
+
+#item4 {
+  background-color: #A9A9A9;
+  grid-row: 4 / 5;
+  grid-column: 2 / 3;
 }
 
 footer {
   background-color: #008080;
+  grid-row: 5 / 6;
+  grid-column: 1 / 3;
 }
